--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@oruga-ui/oruga-next": "^0.9.3",
     "bulma": "^1.0.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -21,8 +22,8 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.14.5",
     "@types/google.accounts": "^0.0.15",
+    "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
